--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mongodb+srv://matheus:ZIFahSWELpiPBQSH@cluster0.fyfemna.mongodb.net/oneonone?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://matheus:ZIFahSWELpiPBQSH@cluster0.fyfemna.mongodb.net/dev-oneonone?retryWrites=true&w=majority"
 # "mongodb+srv://matheus:Password123@cluster0.byhaws8.mongodb.net/projetopatrimonial"
