--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
-    "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
@@ -27,6 +26,10 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "eslint": "^8.29.0",
+    "eslint-plugin-react": "^7.31.11",
     "prisma": "^4.7.1"
   }
 }
