Init Develop of jwt and Middleware

--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
     "eslint-config-next": "13.0.6",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "typescript-cookie": "^1.0.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "eslint": "^8.29.0",
