--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
+    "cookies-next": "^2.1.1",
     "eslint-config-next": "13.0.6",
     "jsonwebtoken": "^8.5.1",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3",
