--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/styled-components": "^5.1.26",
     "cookies-next": "^2.1.1",
     "eslint-config-next": "13.0.6",
+    "jose": "^4.11.1",
     "jsonwebtoken": "^8.5.1",
     "next": "13.0.6",
     "react": "18.2.0",
