--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookies-next": "^2.1.1",
     "eslint-config-next": "13.0.6",
     "jose": "^4.11.1",
+    "js-base64": "^3.7.4",
     "jsonwebtoken": "^9.0.0",
     "next": "13.0.6",
     "react": "18.2.0",
@@ -30,7 +31,8 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3",
-    "typescript-cookie": "^1.0.4"
+    "typescript-cookie": "^1.0.4",
+    "zustand": "^4.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
